seasonssk.css
/* ... */
#monthplace_10 {
	left: 10px;
	top: 140px;
}
#monthplace_11 {
	left: 55px;
	top: 55px;
}
#monthplace_12 {
	left: 140px;
	top: 10px;
}

#current_month {
	width: 30px;
	height: 30px;
	background-image: url("img/icons.png");
	position: absolute;
	background-position: -0px -25px;
	left: 185px;
	top: 185px;
}

.yearplace {
	position: absolute;
	width: 36px;
	height: 36px;
}
#yearplace_1 {
	left: 149px;
	top: 183px;
}
#yearplace_2 {
	left: 181px;
	top: 183px;
}
#yearplace_3 {
	left: 214px;
	top: 183px;
}

#current_year {
	width: 36px;
	height: 36px;
	box-shadow: 0px 0px 7px 8px #e9b415;
	border-radius: 20px;
	position: absolute;
	background-position: -30px -25px;
	left: 149px;
	top: 183px;
}

.bonus_actions {
	display: grid;
	grid-template-columns: 40px 40px;
	grid-template-rows: 56px 56px;
	grid-column-gap: 5px;
	grid-row-gap: 5px;
}

.bonus {
	cursor: pointer;
	background-image: url("img/bonuses.png");
	border-radius: 6px;
}
.bonus1 {
	width: 39px;
	height: 55px;
	background-position: -47px -3px;
}
.bonus2 {
	width: 39px;
	height: 55px;
	background-position: -92px -3px;
}
.bonus3 {
	width: 38px;
	height: 55px;
	background-position: -3px -3px;
}
.bonus4 {
	width: 39px;
	height: 55px;
	background-position: -137px -3px;
}

.ssn-info {
	font-size: smaller;
}

.enabled {
	box-shadow: 0px 0px 1px 2px #f0ec18;
}

#season_dices_wrap {
	display: grid;
	grid-template-columns: max-content auto;
	justify-content: space-between;
	align-items: center;
}

/* don't need border since the die moves immediatly somewhere else.*/
#seasons_dices .stockitem_selected {
	border: none !important;
}

.gamestate_draftChoice #season_dices_wrap,
.gamestate_continueDraftChoice #season_dices_wrap,
.gamestate_draftTwist #season_dices_wrap,
.gamestate_chooseToken #season_dices_wrap,
.gamestate_buildLibraryNew #season_dices_wrap,
.gamestate_buildLibrary3 #season_dices_wrap,
.gamestate_buildLibrary2 #season_dices_wrap {
	display: none;
}

.conversion_reminder {
	display: flex;
	grid-column: 2;
}

.reminder {
	display: flex;
}

#convertFor1 .energy {
	margin: 0px 3px 0px 3px;
}

/*Player board on the left*/
.leftPlayerBoard {
	border: 2px solid #9d7e7e;
	border-radius: 60px;
	display: inline-flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 5px;
	position: relative;
	gap: 10px;
}
.leftPlayerBoard .ssn-avatar {
	width: 92px;
	height: 92px;
	border: 2px solid;
	border-radius: 50px;
	border-color: inherit;
	/*position: absolute;
	top: 10px;*/
}

.bonus_actions_used {
	margin-bottom: 5px;
}

.bonus_actions_used div:first-child,
.bonus_actions_used div:last-child {
	margin-bottom: -4px;
}

.leftPlayerBoard .icon_cristal {
	position: relative;
	top: 0px;
	left: -17px;
}
.leftPlayerBoard .prestige {
	position: relative;
	top: 0px;
	right: -15px;
}

#board_counters {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-start;
	width: 100%;
	position: absolute;
	top: 0px;
}


.counter {
	color: white;
	font-weight: bold;
	display: flex !important;
	justify-content: center;
	align-items: center;
}

.ages {
	position: absolute;
	bottom: -45px;
	left: 12px;
	display: flex;
	column-gap: 6px;
	justify-content: center;
}
.age {
	width: 55px;
	height: 55px;
	cursor: pointer;
}

.tableau {
	position: relative;
	display: grid;
	grid-template-columns: max-content auto;
	column-gap: 7px;

	/*todo remplacer par vraie image. */
	margin: 15px 0px;
	border-image-repeat: round;
	background: url("img/parchmentInside.png");
	background-clip: padding-box;
	border: 60px solid transparent;
	border-image-source: url("img/parchmentComplete.png");
	border-image-slice: 186;
	background-position: 43% 70%;
	/*background-size: 316%;*/

	/*background: url("https://cdn.pixabay.com/photo/2017/09/28/08/38/paper-2794699_960_720.png")
		no-repeat;
	background-size: cover;*/
}
/*.tableau::before{
	background: url("img/parchmentLeft.png");
width: 20px;
}*/
/*.parchement {
	width: 20px;
	display: inline;
}
.parchementEnding {
	background: url("img/parchmentRight.png");
}
.parchementBeginning {
	background: url("img/parchmentLeft.png");
	width: 20px;
}*/

.stock-wrapper {
	display: grid;
}

.stock-wrapper div {
	grid-column: 1;
	grid-row: 1;
}

/* card */

.cardtitle {
	position: absolute;
	top: 5px;
	left: 23px;
	font-weight: bold;
	font-size: 50%;
	width: 80px;
	text-align: center;
}

.cardtooltip {
	text-align: center;
	max-width: 300px;
}
.dietooltip {
	max-width: 300px;
}
.possibleCard {
	border-radius: 15px;
	box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
	-moz-box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
	-webkit-box-shadow: 0px 0px 3px 3px rgb(186 86 209 / 93%) !important;
	cursor: default;
}

/* no zoom on dice because they get blury */
:not(#seasons_dices) > .stockitem:hover {
	transform: scale(1.05);
	z-index: 150 !important;
}

.all_die_faces {
}
.all_die_face {
	background-image: url("img/dices.png");
	width: 54px;
	height: 54px;
	margin: 5px;
	display: inline-block;
}

.tableau .cardactivation {
	position: absolute;
	left: 42px;
	bottom: 12px;
	background-image: url("img/icons.png");
	background-position: -150px 0px;
	width: 40px;
	height: 40px;
	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
}
.tableau .activated .cardactivation {
	display: block;
	box-shadow: none;
}

.cardenergies {
	position: absolute;
	left: 10px;
	top: 20px;
	width: 100px;
	height: 100px;
}
.cardartwrap {
}
.cardart {
	display: inline-block;
	background-image: url("img/bigcards.jpg");
	width: 248px;
	height: 346px;
	margin: 10px;
}

#player_hand {
	background-color: rgb(12 12 12 / 43%);
	text-align: center;
	border-radius: 10px;
	padding: 10px 5px 10px 5px;
	justify-content: space-between;
	min-height: 173px;
}
#player_hand,
#myhand h3 {
	box-shadow: inset 1px 1px 4px -2px #303838;
}
#myhand h3 {
	background-color: rgb(12 12 12 / 43%);
	border-radius: 8px 8px 0px 0px;
	padding: 4px 10px 0px 10px;
	margin: 0px;
	display: inline;
}
#myhand {
	text-align: center;
}
/* ... */

